hphp/hack/test/typecheck/records/record_decl_duplicate_field.php
<?hh

record A {
  x: int,
  y: string,
  x: int,
}
